# TGP_ASTRO

./: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py
app/api/: main.py
app/bot/: __init__.py  handlers.py  menu.py  middlewares.py
app/core/assets/: __init__.py  loader.py
app/core/compose/: __init__.py
app/core/draw/: __init__.py
app/core/limits/: __init__.py
app/core/payments/: __init__.py
app/core/plugins/: __init__.py  __main__.py
app/core/telemetry/: __init__.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/experts/: messages.py
app/experts/assistant/: __init__.py
app/experts/astrology/: __init__.py
app/experts/copywriter/: __init__.py
app/experts/dreams/: __init__.py
app/experts/lenormand/: __init__.py
app/experts/numerology/: __init__.py
app/experts/runes/: __init__.py
app/experts/tarot/: __init__.py
app/nlp/guide/: __init__.py
app/nlp/localizer/: __init__.py
app/storage/: __init__.py
app/tests/: test_api.py  test_assets_loader.py  test_astrology_plugin.py  test_compose.py  test_draw.py  test_e2e_experts.py  test_limits.py  test_nlp_modules.py  test_numerology.py  test_payments.py  test_runes_plugin.py  test_storage.py  test_tarot_plugin.py
assets/dreams/: lexicon.json
assets/numerology/: rules.json
docs/: FAQ.md  negative_cases.md  runbook.md  setup.md  telemetry.md
scripts/: postdeploy.py  prestart.py  start.sh
(+11 files in other folders)
