[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["aiogram", "aiogram.*", "pytest"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["app/tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
