[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["app/tests/test_e2e_experts.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["aiogram", "aiogram.*", "pytest"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*", "sqlalchemy", "sqlalchemy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["swisseph", "matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["minio", "minio.*", "weasyprint", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["app/tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
